# urbanshooter

./: ProjectHome.md  RoadMap.md  WE_Developpez.md
Hud/: CMakeLists.txt
Hud/src/: CallbackList.cpp  CallbackList.h  CallbackManager.cpp  DisplayGeometry.cpp  DisplaySetting.cpp  DisplaySetting.h  HudManager.cpp  HudManager.h  HudText.cpp
LSys/: CMakeLists.txt
LSys/VS/LSys/: LSys.vcproj
LSys/src/: Element.h  Generator.cpp  Generator.h  Regle.h  Translator.cpp  Translator.h
Shooter/VS2008/Shooter/: Shooter.sln  Shooter.vcproj
Shooter/config/: config.txt
Shooter/datas/: level.max  level.osg
Shooter/datas/images/: ok.Idriss.tga
Shooter/sources/: main.cpp
Shooter/sources/animation/: RotationCallback.cpp  RotationCallback.h  TranslationCallback.cpp  TranslationCallback.h
Shooter/sources/config/: Settings.cpp  Settings.h
Shooter/sources/game/: GameEngine.cpp  GameEngine.h  Score.h  Sniper.h  TargetManager.cpp  TargetManager.h  Weapon.cpp  Weapon.h  WeaponManager.cpp
Shooter/sources/graphic/: EventHandler.cpp  EventHandler.h  FPSManipulator.cpp  FPSManipulator.h  GraphicEngine.cpp  GraphicEngine.h  HudViewFinder.cpp  StateHud.cpp  StateHud.h
Shooter/sources/manager/: Engine.h  GameManager.cpp  GameManager.h
Shooter/sources/sound/: SoundEngine.cpp  SoundEngine.h
Tests/: Tests.vcproj
Tests/sources/: Utility.h
Tests/sources/CallbackManager/: CallbackManagerTest.cpp  CallbackManagerTest.h
Tests/sources/TranslationCallback/: TranslationCallbackTest.cpp  TranslationCallbackTest.h
UrbanShooter/: UrbanShooter.sln  UrbanShooter.vcproj
conception/Hud/: 128002.diagram  Hud.prj
conception/code/: AnimateCallback.cpp  DisplayGeometry.cpp  DisplayGeometry.h  DisplaySetting.cpp  DisplaySetting.h  HudText.cpp  HudText.h  Mode.h  TransparencyCallback.cpp
src/: UrbanShooter.smp
src/animation/: ProgressiveTransparencyCallback.cpp  ProgressiveTransparencyCallback.h
src/deprecated/: ExpireCallback.h
src/hud/: HudManager.cpp  HudManager.h  HudText.cpp  HudTextRoot.cpp
src/hud2/: DisplayGeometry.cpp  DisplayGeometry.h  DisplaySetting.cpp  DisplaySetting.h  ExpireCallback.h  HudManager.cpp  HudManager.h  HudText.cpp
src/render/: Effects.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Hud.cpp  Hud.h  Launcher.cpp  MyHandler.h  ProgressiveTransparencyCallback.cpp  ProgressiveTransparencyCallback.h  Sniper.h  TODO.txt  Weapon.cpp  WeaponHandler.cpp  WeaponHandler.h  WeaponManager.cpp  WeaponManager.h
src/render/Hud/: CallbackList.cpp  CallbackList.h  HudManager.h  HudText.cpp  HudTextRoot.h
src/utility/: Macros.h
trunk/Hud/: CMakeLists.txt
trunk/Hud/src/: CallbackManager.h  Effects.h  HudManager.h  HudText.h  NodeCollector.h  TranslationCallback.cpp  TranslationCallback.h
trunk/LSys/src/: Dictionnary.h  Generator.cpp  Generator.h  main.cpp
trunk/Shooter/config/: config.txt
trunk/Shooter/datas/: level.max  level.osg
trunk/Shooter/sources/: main.cpp
trunk/Tests/: Tests.vcproj
trunk/Tests/sources/: main.cpp
trunk/UrbanShooter/: UrbanShooter.sln  UrbanShooter.vcproj
trunk/conception/Hud/: 128002.bodies  128002.diagram  2.session  Hud.prj  generation_settings
trunk/conception/code/: AnimateCallback.h  DisplayGeometry.cpp  DisplayGeometry.h  DisplaySetting.h  HudManager.cpp  HudManager.h  Mode.cpp  TransparencyCallback.cpp  TransparencyCallback.h
trunk/src/: UrbanShooter.smp
trunk/src/animation/: CallbackList.h  CallbackManager.cpp  ProgressiveTransparencyCallback.h  TranslationCallback.cpp  TranslationCallback.h
trunk/src/hud/: ExpireCallback.cpp  HudManager.cpp  HudManager.h  HudTextRoot.cpp  HudTextRoot.h
trunk/src/hud2/: DisplayGeometry.cpp  DisplayGeometry.h  DisplaySetting.cpp  ExpireCallback.cpp  HudManager.cpp  HudManager.h
trunk/src/render/: Game.cpp  Game.h  GameManager.cpp  Hud.cpp  (+12 more)
wiki/: RoadMap.wiki  WE_Developpez.wiki
(+46 files in other folders)
